--- a/index.html
+++ b/index.html
@@ -9,9 +9,10 @@
 <body>
     <script src="index.js"></script>
     <h1>Hangman!</h1>
-    <h2></h2>
+    <div></div>
     <div class="reset"></div>
      <div class="hangman">
+        <div class="letters"></div>
         <div class="head">HEAD</div>
         <div class="body">BODY</div>
         <div class="leg#1">LEFTLEG</div>
