--- a/index.html
+++ b/index.html
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script src="index.js"></script>
+    
     <h1>Hangman!</h1>
-    <div></div>
-    <div class="reset"></div>
+    <div id="letter">
+
+    </div>
+
      <div class="hangman">
-        <div class="letters"></div>
         <div class="head">HEAD</div>
         <div class="body">BODY</div>
         <div class="leg#1">LEFTLEG</div>
@@ -20,5 +21,6 @@
         <div class="arm#1">LEFTLEG</div>
         <div class="arm#2">RIGHTLEG</div>
      </div>
+     <script src="index.js"></script>
 </body>
 </html>
