some stuff good luck zack

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     </div>
 
      <div class="hangman">
+        <div id="lives"></div>
         <div class="head">HEAD</div>
         <div class="body">BODY</div>
         <div class="leg#1">LEFTLEG</div>
