--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
     
@@ -15,12 +15,7 @@
 
      <div class="hangman">
         <div id="lives"></div>
-        <div class="head">HEAD</div>
-        <div class="body">BODY</div>
-        <div class="leg#1">LEFTLEG</div>
-        <div class="leg#2">RIGHTLEG</div>
-        <div class="arm#1">LEFTLEG</div>
-        <div class="arm#2">RIGHTLEG</div>
+       <div id="guess"></div>
      </div>
      <script src="index.js"></script>
 </body>
